# relational-transformer

./: .gitignore  README.md  doc.md  pyproject.toml
rt/: data.py  embed.py  hybrid_main.py  main.py  model.py  row_graph_b1.py  row_graph_b2.py  tasks.py  token_rel_nbfnet.py  ultra_graph.py  ultra_row_b1.py  ultra_row_b2.py  ultra_row_b3.py  ultra_row_hybrid.py
rustler/: Cargo.toml  README.md  pyproject.toml
rustler/src/: common.rs  fly.rs  lib.rs  main.rs  pre.rs
scripts/: b1_indist_trial.py  b2_indist_trial.py  b3_zeroshot_trial.py  b_hybrid_zeroshot.py  dbrt_pretrain.py  download_relbench.py  example_contd_pretrain.py  example_finetune.py  example_pretrain.py  visualize_rustler.py
scripts/eda/: schema_eda.py  schema_summary.json
