[project]
name = "rt"
requires-python = "==3.12"
version = "0.1.0"
dependencies = ["relbench[full]>=2.1.1,<3", "wandb>=0.26.0,<0.27"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
rt = { path = ".", editable = true }
sentence_transformers = "*"
torch = "==2.6.0"
wandb = "*"
einops = "*"
strictfire = "*"
maturin = { version = "*", extras = ["patchelf"] }
ml_dtypes = "*"
orjson = "*"
ipykernel = "*"
scikit-learn = "<1.6.0"
polars = "*"
maturin_import_hook = "*"
matplotlib = "*"
torch-geometric = ">=2.7.0,<3"
torch-scatter = { url = "https://data.pyg.org/whl/torch-2.6.0%2Bcu124/torch_scatter-2.1.2%2Bpt26cu124-cp312-cp312-linux_x86_64.whl" }

[tool.pixi.dependencies]
rust = "*"
pygraphviz = "*"
uv = "*"
