[package]
name = "rustler"
version = "1.0.0"
edition = "2024"

[lib]
name = "rustler"
crate-type = ["cdylib"]

[dependencies]
polars = {version = "*",  features = ["parquet", "lazy"]}
parquet = "*"
serde_json = "*"
glob = "*"
itertools = "*"
serde = { version = "*", features = ["derive"] }
rand = "0.9.1"
clap = { version = "*", features = ["derive"] }
pyo3 = { version = "*", features = ["abi3-py312"] }
memmap2 = "*"
rkyv = "*"
numpy = { version = "*", features = ["half"] }
indicatif = "*"
half = { version = "*", features = ["rkyv"] }
